# readingbuddy

./: .gitignore  Cargo.toml
src/: books.rs  gen_lib.rs  image_lib.rs  json_funcs.rs  main.rs  ol_api_containers.rs  structs.rs
src/app/: books.rs  cli.rs  edition.rs  epub_lib.rs  gen_lib.rs  json_funcs.rs  mod.rs  ol_api_containers.rs
src/epub_lib/: mod.rs
