[package]
name = "reading_card"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5.7", features = ["serde"] }
# tokio = { version = "1", features = ["macros"] }
