[package]
name = "reading_card"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.5.7", features = ["serde"] }
epub = "2.1.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "json", "time"] }
anyhow = "1.0.100"
time = { version = "0.3.44", features = ["macros"]}
futures = "0.3.31"

# xml = "1.0"
